# qr-decode

./: Cargo.toml
src/: bardecoder.rs  qrtool.rs  quircs.rs  rixing.rs  rqrr.rs
