[package]
name = "qrcode-decoder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bardecoder"
path = "src/bardecoder.rs"

[[bin]]
name = "rqrr"
path = "src/rqrr.rs"

[[bin]]
name = "quircs"
path = "src/quircs.rs"

[[bin]]
name = "qrtool"
path = "src/qrtool.rs"

[[bin]]
name = "rxing"
path = "src/rixing.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bardecoder = "0.5.0"
image = "0.25.0"
quircs = "0.10.2"
rqrr = "0.7.1"
bardecoder = "0.5"
rxing = "0.5.9"
#image = "0.24"